--- a/index.html
+++ b/index.html
@@ -1257,7 +1257,7 @@
 
         <h2 id="intro-services-html-next1">
 
-            Welcome to WebEaze. We do things quite eazily here. Ongoing Support from the start. No hourly rates. Let's make your website stand out.
+            Welcome to WebEaze. We create websites quite eazily here. Ongoing Support from the start. No hourly rates. Let's make your website stand out.
         </h2>
 
 
