--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,7 @@
 
             <br>
 
-            <p class="typing-text" data-text="Schedule a FREE consultation with us. We'll discuss website needs, goals, timeline and budget. No obligation, No pressure. "></p>
+            <p class="typing-text" data-text="Book a FREE consultation—let's plan your website with no pressure, no commitments!"></p>
     
  
 
