--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@
 
     <br>
 
-    <p id="footnote1">* <a href="https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/#:~:text=Created%20with%20Highcharts%207.2.2,23%20Q1%20'24%20Q3%20'24" target="_blank">Source: Percentage of mobile device website traffic worldwide from 1st quarter 2015 to 4th quarter 2024, from Statista.</a></p>
+    <p id="footnote1" style="text-align: center;">* <a href="https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/#:~:text=Created%20with%20Highcharts%207.2.2,23%20Q1%20'24%20Q3%20'24" target="_blank">Source: Percentage of mobile device website traffic worldwide from 1st quarter 2015 to 4th quarter 2024, from Statista.</a></p>
     <div class="social-media-links">
         <a href="https://www.facebook.com/share/129pv5HzLz7/?mibextid=LQQJ4d" target="_blank" aria-label="Facebook">
             <i class="fab fa-facebook"></i>
