--- a/about.html
+++ b/about.html
@@ -1184,7 +1184,7 @@
 
     .background-section {
         position: relative;
-        background-image: url('https://webeaze.io/images/elegant-background.jpg'); 
+        background-image: url('https://webeaze.io/images/about-background.jpg'); 
         background-size: cover;
         background-position: center;
         height: 700px; 
@@ -1277,7 +1277,19 @@
 
         <h1><strong>What do we do?</strong></h1>
 
-        <p id="intro-services-html-next1"> We specialize in creating high-quality, professional websites for small businesses, entrepreneurs, and creative professionals. Our goal is to provide you with a website that is not only visually appealing but also functional, responsive, and easy to manage all for one low price. To do this, we offer 3 simple packages that last 12 months with ongoing support and maintenance while creating the website of your dreams. The best part: No hourly rates or extra fees.</p>
+        <p id="intro-services-html-next1"> We specialize in creating <strong>professional, responsive websites</strong> for small businesses, local service providers, and entrepreneurs. Whether you're an educator, tradesperson, or travel expert — we build websites that elevate your brand and drive results.
+
+            <br>
+            <br>
+
+            Choose from three straightforward packages that <strong>include ongoing support and maintenance and SE0 optimization tools </strong> — all with no hourly rates or hidden fees.
+
+            <br>
+            <br>
+
+            Just one price. One plan. One powerful online presence.
+
+        </p>
 
         <br>
         <br>
@@ -1296,7 +1308,19 @@
 
         <h1><strong>Why choose us?</strong></h1>
 
-        <p id="intro-services-html-next1">We believe in websites that are not just visually appealing but also functional, responsive, and easy to manage. Our goal is to simplify the web design process so you can focus on what you do best while we handle the technical details. Let's create something amazing together.</p>
+        <p id="intro-services-html-next1">We believe great websites should be more than just beautiful — they should be fast, functional, and easy to manage.
+
+            <br>
+            <br>
+
+            At WebEaze, we take care of the tech, so you can focus on your business.
+
+            <br>
+            <br>
+
+            Let's create something meaningful and effective together.
+
+        </p>
 
         <br>
         <span></span>
@@ -1316,7 +1340,9 @@
 
                     <br> 
 
-                    <p style="font-size: 10px; color: white">Billy is a web designer who is also a Computer Science student at the University of Miami. Founder of WebEaze, he is passionate about creating beautiful, user-friendly websites that help businesses grow. He's also a self-taught entrepreneur who loves to share his knowledge and experience with others.</p>
+                    <p style="font-size: 10px; color: white">Billy is a web designer and Computer Science student at the University of Miami. As the founder of WebEaze, he's passionate about creating clean, user-friendly websites that help small businesses grow. A self-taught entrepreneur, Billy brings creativity, technical expertise, and startup spirit to every project.
+
+                    </p>
 
                 </div>
         
@@ -1329,7 +1355,7 @@
                     
                     <p style="color: white;">Web Design & Acquisition Manager</p>
                     <br>
-                    <p style="font-size: 10px; color: white">Goerlitz Edmond is an Information Technology Specialist and Computer Science student at Southern New Hampshire University. He has a strong interest in cloud computing, software engineering, and emerging technologies. He's passionate about learning new technology and continuously expanding his skills within the tech industry.
+                    <p style="font-size: 10px; color: white">Goerlitz is an IT specialist and Computer Science student at Southern New Hampshire University. With a deep interest in cloud computing and emerging tech, he's committed to staying ahead of the curve and delivering quality, scalable solutions for every client.
                     </p>
 
                     <br>
