--- a/about.html
+++ b/about.html
@@ -1284,7 +1284,7 @@
             <br>
             <br>
 
-            Choose from three straightforward packages that <strong>include ongoing support and maintenance and SE0 optimization tools </strong> — all with no hourly rates or hidden fees.
+            Choose from three straightforward packages that <strong>include ongoing support and maintenance and SEO optimization tools </strong> — all with no hourly rates or hidden fees.
 
             <br>
             <br>
