--- a/portal.html
+++ b/portal.html
@@ -1176,7 +1176,7 @@
             Timelines and Requests <span class="spoiler-icon">▼</span>
             <div class="spoiler-content">
 
-                <p style="text-align: left; font-size: 13px;">Typically, website requests are completed within 2 weeks for existing websites, and 3 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
+                <p style="text-align: left; font-size: 13px;">Typically, website requests are completed within 3-4 weeks for existing websites, and 1-2 weeks for new websites. You'll receive an email from support@webeaze.io when your website has been updated or launched. 
 
                 <br>
                 <br>
@@ -1259,7 +1259,11 @@
             <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 2 weeks</strong></p>
             <p>Updates: Emailed from support@webeaze.io</p>
 
+            <p>2 websites are currently in the queue. </p>
+
             <br>
+
+            
 
             <div style="color: white;" class="spoiler" onclick="toggleSpoiler(this)">
                 Need Help? <span class="spoiler-icon">▼</span>
@@ -1337,7 +1341,7 @@
                 Website link and hosting costs?<span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
 
-                    <p style="text-align: left;font-size: 12px; "><strong>Growth package clients</strong>: We'll cover up to $144.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences.  It is only available once, and is not available for the monthly Growth package subscription.
+                    <p style="text-align: left;font-size: 12px; "><strong>Growth package clients</strong>: We'll cover up to $50 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences.  It is only available once, and is not available for the monthly Growth package subscription.
 
                         <br>
                         <br>
