--- a/portal.html
+++ b/portal.html
@@ -1271,6 +1271,9 @@
                     <ul>
                         <li><a href="website-request.html"><u>Submit a Website Change</u></a></li>
                         <li><u><a href="https://calendly.com/webeaze/session-full-setups">Schedule Live Session</a></u></li>
+                        <li>
+                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u>; Available 9am-5pm Thursday and Friday, 9am-midnight on weekends.
+                         </li>
                         <li><a href="#track-request">Track Your Request (coming soon!)</a></li>
                     </ul>
                 </div>
@@ -1332,6 +1335,9 @@
                     <ul>
                         <li><a href="website-request.html"><u>Submit a Website Change</u></a></li>
                         <li><u><a href="https://calendly.com/webeaze/session-full-setups">Schedule Live Session</a></u></li>
+                        <li>
+                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u>; Available 9am-5pm Thursday and Friday, 9am-midnight on weekends.
+                         </li>
                         <li><a href="#track-request">Track Your Request (coming soon!)</a></li>
                     </ul>
                 </div>
@@ -1488,6 +1494,18 @@
         element.classList.toggle('open');
     }
 </script>
+
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/67ea7c80d3fdf2190fe8255d/1inlvcln3';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
 
     
 </body>
