--- a/index.html
+++ b/index.html
@@ -1635,7 +1635,7 @@
 
 
 
-        <div class="contact-services" style="background-color:#5D4037">
+        <div class="contact-services" style="background: linear-gradient(to bottom, #7851a9 0%, #5D4037 100%)">
 
             <h1 id="questions-heading"><strong>Let's talk.
             </strong></h1>
