--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
                 <div style="flex: 1 1 250px; text-align: center; color: white;">
                     <i class="fas fa-chalkboard-teacher" style="font-size: 40px;"></i>
                     <h4>Tutors & Educators</h4>
-                    <p style="color: white; text-align: center; text-align: center; font-size: 13px;">Private tutors, test prep centers, academic coaches</p>
+                    <p style="color: white; text-align: center; text-align: center; font-size: 13px;">Private tutors, test prep centers, personal trainers</p>
                 </div>
                 <div style="flex: 1 1 250px; text-align: center; color: white;">
                     <i class="fas fa-plane-departure" style="font-size: 40px;"></i>
@@ -1861,7 +1861,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const questions = [
-        "Websites for Tutors, Trades, and Travel Pros—Done Right.",
+        "Websites for Tutors/Trainers, Trades, and Travel Pros—Done Right.",
         "Do your students, clients, or customers know how to find you?",
         "We build websites for local experts who mean business.",
         "Need a site that books more calls, lessons, or trips?",
