--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
             <div class="cover-img-wrapper">
                 <img src="images/cover-background-2.png" alt="Cover Background">
             </div>
-            <p class="typing-text" data-text="SEO Optimization from the beginning. We're not happy until your site traffic starts growing."></p>
+            <p class="typing-text" data-text="SEO expertise & tools from the beginning. We're not happy until your site traffic starts growing."></p>
         
             <br><br>
             <br>
