--- a/index.html
+++ b/index.html
@@ -1859,7 +1859,7 @@ content: "";
 
         <section style="padding: 60px 20px; text-align: center; color: white; background-color: #1c1c1c; padding: 60px 20px; text-align: center; color: white; background-image: url('https://www.transparenttextures.com/patterns/black-linen.png');">
             <h2 style="font-size: 2.2rem; margin-bottom: 20px;" class="fade-in-on-scroll">You Work Hard. So Should Your Site.</h2>
-            <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px; color: white; text-align: center;" class="fade-in-on-scroll">Let's get your business online, optimized, and looking amazing. Schedule a free consultation—no strings attached.</p>
+            <p style="font-size: 1.2rem; max-width: 700px; margin: 0 auto 30px; color: white; text-align: center;" class="fade-in-on-scroll">Let's get your business online, optimized, and looking amazing. Schedule a free consultation, no strings attached.</p>
 
                  <a href="https://calendly.com/webeaze/free-consultation" class="cta-button-schedule">Schedule Your Free Consult</a>
             
@@ -2070,13 +2070,13 @@ content: "";
         const questions = [
 
   "Your website should work as hard as you do.",
-  "Let’s turn clicks into clients. Effortlessly.",
+  "Let's turn clicks into clients. Effortlessly.",
   "We build websites for tutors, travelers & tradespeople.",
-  "Don’t just be online. Stand out.",
+  "Don't just be online. Stand out.",
   "Need a site that sells your services, not just lists them?",
   "Affordable websites. Real support. No headaches.",
   "Custom sites for people who don't have time to DIY.",
-  "From idea to launch — we handle everything.",
+  "From idea to launch, we handle everything.",
   "Mobile-first, SEO-ready websites for small businesses.",
   "Your business deserves better than a template."
 
