Updates to Refund Policy

--- a/portal.html
+++ b/portal.html
@@ -175,6 +175,11 @@
             
         }
 
+    body {
+        cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='32' width='32'><text y='20' font-size='20'>🖥️</text></svg>") 16 16, auto;
+
+        }
+
         header.page-website-setup-header h1 {
             font-size: 36px;
             margin-bottom: 10px;
