--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1263,7 +1263,7 @@
         <br>
         <br>
 
-        <strong>Package Upgrades</strong>: You may upgrade your package within the first 30 days of purchase. You will be responsible for the difference in price between the two packages. No refunds will be issued for downgrades.
+        <strong>Package Upgrades</strong>: You may upgrade your package at any time through your <a href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144"><u>Account</u></a>. You will be charged the difference in price between the two packages. The new package will take effect immediately, and you will not receive any refunds nor will you be able to downgrade until the next billing cycle.
 
         </p>
 
