--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 
     }
 
+    body {
+        cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='32' width='32'><text y='20' font-size='20'>🖥️</text></svg>") 16 16, auto;
+
+    }
+
     section {
 
         border-radius: 0;
