--- a/portal.html
+++ b/portal.html
@@ -1138,19 +1138,17 @@
 
 
     
-    <!-- <header style="background-color: #ffee00 !important; margin-bottom: -20px; margin-top: 85px;" class="page-website-setup-header">
+    <header style="background-color: #ce7d6e !important; margin-bottom: -20px; margin-top: 85px;" class="page-website-setup-header">
 
 
-            <p style="color: black !important; font-size: 12px;"><strong>Pricing & Feature Changes</strong>
+            <p style="color: black !important; font-size: 12px;"><strong>Holiday Observance</strong>
                 <br>
-                An important change to website support benefits will be in effect starting THIS FRIDAY, <u>April 18, 2025</u>. Existing clients must convert to a new subscription if they wish to continue receiving full ongoing support.
-                <br>
-                <a href="https://open.substack.com/pub/webeaze/p/important-changes-to-website-support?r=5ebxqk&utm_campaign=post&utm_medium=web&showWelcomeOnShare=false" target="_blank" style="color: black !important;"><strong>Learn more</strong></a>.
+                Live Chat & Sessions will be closed for the observance of Easter and related holidays this weekend. Wishing you all a great weekend with family and friends, and if you need anything, you're welcome to submit a support request. 
                 </p>
 
         
 
-    </header> -->
+    </header>
 
 
     <header id="header-services">
