--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@ content: "";
         </div>
 
 
-         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+         <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #7851a9 !important;">
 
             <a class="navbar-brand" href="index.html">
                
