--- a/index.html
+++ b/index.html
@@ -1849,7 +1849,7 @@ content: "";
             <div class="faq-item">
                 <h3 class="faq-question">Do you have any samples?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Absolutely. You'll find examples of tutoring, travel, and trade websites we've built in the “Samples are important” section below. Need something specific? <a href="contact-us.html"><strong>Contact us</strong></a> and we'll send you tailored examples for your industry.
+                    Absolutely. You'll find examples of tutoring, travel, and trade websites we've built in the “These businesses are thriving” section <a href="index.html#samples-are-important"><strong>above</strong></a>. Need something specific? <a href="contact-us.html"><strong>Contact us</strong></a> and we'll send you tailored examples for your industry.
 
 
                 </p>
