--- a/consultation.html
+++ b/consultation.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Elite Package | WebEaze</title>
+    <title>Consultation | WebEaze</title>
     <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
