--- a/site-map.html
+++ b/site-map.html
@@ -1218,10 +1218,10 @@
             <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html#setup-packages-heading">Pricing</a></li>
                 <li><a href="contact-us.html">Contact Us</a></li>
-                <li><a href="consultation.html">Elite Package Quote</a>
+                <li><a href="consultation.html">Consultation Form</a>
                 <li><a href="portal.html">Client Portal</a></li>
                 <li><a href="faq.html">FAQ's</a></li>
-                <li><a href="website-request.html">Submit A Website Request</a></li>
+                <li><a href="website-request.html">Website Request</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 
                 <li><a href="refund-policy.html">Refund Policy</a></li>
