--- a/about.html
+++ b/about.html
@@ -1157,6 +1157,11 @@
           
         }
 
+        .nav-link {
+
+            color: black !important;;
+        }
+
         .about {
         text-align: center;
         padding: 50px;
@@ -1441,7 +1446,7 @@
 
 
 
-         <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #5D4037 !important;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #ffffff !important;">
 
             <a class="navbar-brand" href="index.html">
                
