Updates to Home to improve speed

--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,7 @@ content: "";
   transform: translate(-50%, -50%);
   object-fit: cover;
   filter: brightness(0.5);
+  border-radius: 0;
 }
 
 
@@ -1592,10 +1593,10 @@ content: "";
 
       
     <header id="header-services" class="video-header">
-        <video autoplay muted loop playsinline class="bg-video">
-            <source src="videos/header-bg.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+   
+
+    <img src="images/bg-header.png" alt="Background Header" class="bg-video">
+=
 
 
         <br>
@@ -1919,8 +1920,8 @@ content: "";
                       
   <section style="padding: 3rem 1rem; text-align: center; background-color: #7851a9; position: relative; overflow: hidden;">
 
-    <video autoplay muted loop playsinline class="bg-video">
-        <source src="videos/bg-counters.mp4" type="video/mp4">
+
+      <img src="images/bg-who-we-help.png" alt="Background Header" class="bg-video">
         Your browser does not support the video tag.
       </video>
 
