--- a/portal.html
+++ b/portal.html
@@ -1384,8 +1384,8 @@
                     </ul>
 
             
-                       <u><strong>Note:</strong> You must be on a monthly or yearly subscription that is titled "Essential, Growth, or Elite" in order to access support from WebEaze. If you haven't yet subscribed, please <a href="index.html#setup-packages-heading"><strong>click here</strong></a> to view our packages and pricing. Existing clients who are under our original Website Setup package are not eligible for support unless they have converted to a new subscription.
-                        </u>
+                       <strong>Note:</strong> You must be on a monthly or yearly subscription that is titled "Essential, Growth, or Elite" in order to access support from WebEaze. If you haven't yet subscribed, please <a href="index.html#setup-packages-heading"><strong>click here</strong></a> to view our packages and pricing. Existing clients who are under our original Website Setup package are not eligible for support unless they have converted to a new subscription.
+                        
                 </div>
             </div>
 
