--- a/index.html
+++ b/index.html
@@ -1600,13 +1600,14 @@ content: "";
 
 
         <br>
+    
  
         <br>
 
     
 
         <div class="video-overlay">
-        <h1 id="random-question"></h1>
+        <h1 id="random-question" style="margin-top: 100px;"></h1>
 
         <br>
         <br>
