--- a/contact-us.html
+++ b/contact-us.html
@@ -1370,7 +1370,7 @@
         </h2>
 
 
-         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+         <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: #7851a9 !important">
 
             <a class="navbar-brand" href="index.html">
                
@@ -1457,6 +1457,8 @@
             </form>
 
           </section>
+
+          <p id="intro-services-html-next2"> Check out our <a href="https://webeaze.tawk.help" target="_blank"><strong>WebEaze Help Center</strong></a> for answers to common questions.</p>
           
 
  
