--- a/website-request.html
+++ b/website-request.html
@@ -1453,6 +1453,7 @@
 
           </section>
           
+          <p id="intro-services-html-next2"> Check out our <a href="https://webeaze.tawk.help" target="_blank"><strong>WebEaze Help Center</strong></a> for answers to common questions.</p>
 
  
 </main>
