--- a/faq.html
+++ b/faq.html
@@ -949,7 +949,7 @@
 
     .navbar a {
 
-        color: #ffffff;
+        color: #5D4037 !important;
         text-decoration: none;
         margin: 0 5px;
         font-size: 1em;
@@ -1163,7 +1163,7 @@
             
 
 
-         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+         <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="background-color: white !important;">
 
             <a class="navbar-brand" href="index.html">
                
