--- a/portal.html
+++ b/portal.html
@@ -162,7 +162,7 @@
         
         body.page-website-setup {
 
-            background-color:  #7851a9 !important;
+            background-color:  #000000 !important;
 
             width: 100%;
             min-height: 100vh;
