Updates to meta tags, refund policy

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebEaze Web Design</title>
-    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
+    <title>WebEaze: Stunning, Affordable Websites</title>
+    <meta name="description" content="WebEaze creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Effortless. Affordable. With Support.">
     <meta property="og:url" content="https://www.webeaze.io">
-    <meta property="og:image" content="images/favicon.png">
+    <meta property="og:image" content="images/default-monochrome.png">
 
-    <meta name="twitter:card" content="images/favicon.png">
-    <meta name="twitter:title" content="WebEaze - Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/favicon.png">
+    <meta name="twitter:card" content="images/default-monochrome.png">
+    <meta name="twitter:title" content="WebEaze - Stunning, Affordable Websites.">
+    <meta name="twitter:description" content="WebEaze is a web design agency who creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades. ">
+    <meta name="twitter:image" content="images/default-monochrome.png">
 
 </head>
 
