--- a/index.html
+++ b/index.html
@@ -2059,14 +2059,18 @@ content: "";
 
 </main>
 
-<footer>
-
-    <br>
-    <br>
+<section class="footnotes" style="background-color: #7851a9;" >
 
     <p id="footnote1" style="text-align: center; background-color: transparent !important;">* <a href="https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/#:~:text=Created%20with%20Highcharts%207.2.2,23%20Q1%20'24%20Q3%20'24" target="_blank">Source: Percentage of mobile device website traffic worldwide from 1st quarter 2015 to 4th quarter 2024, from Statista.</a></p>
 
-    <p id="footnote2" style="text-align: center; background-color: transparent !important;"> † $100 USD is deducted from the total purchase price. Only available once. Not available for existing clients. For monthly subscriptions, $100 USD is applied to the first month only. Discounts are not applied retroactively. Offer ends May 12, 2025 or while supplies last. </p>
+<p id="footnote2" style="background-color: transparent !important;"> † $100 USD is deducted from the total purchase price. Only available once. Not available for existing clients. For monthly subscriptions, $100 USD is applied to the first month only. Discounts are not applied retroactively. Offer ends May 12, 2025 or while supplies last. </p>
+
+</section>
+
+
+
+<footer>
+
 
 
     
@@ -2095,6 +2099,7 @@ content: "";
             <img src="images/designrush-profile.svg" alt="WebEaze verified agency on DesignRush" style="max-width: 50% !important;" >
         </a>
     </div>
+
 
     
 
