--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,9 @@ content: "";
             <br>
             <br>
 
-            $100 off any plan or package — for all moms turning passion into profit. Use code <u>MOMS2025</u> at checkout.<a href="#footnote2">†</a>
+            $100 off any plan or package for all moms turning passion into profit.
+            <br>
+             Use code <u>MOMS2025</u> at checkout.<a href="#footnote2">†</a>
                 <br>
                 Ends <span id="countdown-timer"></span>.
             </p>
