--- a/site-map.html
+++ b/site-map.html
@@ -1241,6 +1241,9 @@
                     <li>
                         <a href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144" target="_blank">Stripe Payment Portal</a>
                     </li>
+                    <li>
+                        <a href="https://webeaze.tawk.help" target="_blank">WebEaze Help Center</a>
+                    </li>
                 </ol>
 
         </div>
