--- a/about.html
+++ b/about.html
@@ -956,7 +956,8 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: 'Inter', sans-serif;
+        font-family:  'Poppins', sans-serif;
+
     }
 
     .navbar a {
