--- a/consultation.html
+++ b/consultation.html
@@ -1049,7 +1049,8 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: 'Inter', sans-serif;
+        font-family: 'Poppins', sans-serif;
+
 
     }
 
