Updates to fix grammer

--- a/blog.html
+++ b/blog.html
@@ -1356,7 +1356,7 @@
 
 <p style="text-align: left; margin: 40px; color:white; ">Date: Thursday, April 3, 2025</p>
 
-<p style="text-align: left; margin: 40px; color:white; ">We've bee exploring new ways to support our clients. We know that buisinesses are busy, and that you don't have the time to wait for an email response. Beginning Thursday, April 3, clients can now reach out to us live if they need quick changes or adjustments made to their website. This is a great way to support you in real-time, and to get your website up and running as quickly as possible. 
+<p style="text-align: left; margin: 40px; color:white; ">We've been exploring new ways to support our clients. We know that businesses are busy, and that you don't have the time to wait for an email response. Beginning Thursday, April 3, clients can now reach out to us live if they need quick changes or adjustments made to their website. This is a great way to support you in real-time, and to get your website up and running as quickly as possible. 
 
 <br> 
 <br>
