--- a/website-request.html
+++ b/website-request.html
@@ -1435,9 +1435,11 @@
               <label>Subject *</label>
               <select name="subject" required>
                 <option value="">Select a topic...</option>
-                <option value="website-request">Website Change</option>
-                <option value="website-issue">Website Issue</option>
-                <option value="feedback">Feedback</option>
+                <option value="Website Request">Website Change</option>
+                <option value="Website Issue">Website Issue</option>
+                <option value="Paid Ad Campaign Request">Paid Ad Campaign Request</option>
+                <option value="Add-on Request">Add-on Request</option>
+                <option value="Feedback">Feedback</option>
                 <option value="other">Other</option>
               </select>
           
