--- a/about.html
+++ b/about.html
@@ -1234,6 +1234,20 @@
         
     }
 
+    #about-us-header-text {
+    font-size: 20px; 
+    line-height: 1.8;
+    color: white;
+    padding: 40px 20px; 
+    margin: 0 20px; 
+}
+
+@media (max-width: 768px) {
+    #about-us-header-text {
+        font-size: 15px; 
+    }
+}
+
 
 
     
@@ -1268,7 +1282,8 @@
             <br>
 
             <h1 id="random-question"></h1>
-            <p style="font-size: 15px; color: white; line-height: 1.8;">
+            <br>
+            <p id="about-us-header-text">
                   Founded in October 2024, our company began as Billy Joinville Web Services and has since rebranded to <strong>WebEaze</strong> — a name that reflects our mission: making web design simple, seamless, and accessible to everyone. 
                   <br>
                   <br>
