--- a/refund-policy.html
+++ b/refund-policy.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
 
 
 
@@ -400,8 +401,8 @@
 
         #discount-notice {
 
-            margin: 20px; 
-            padding: 60px;
+            margin: 0  auto; 
+            padding: 20px 100px;
 
 
         }
@@ -1235,32 +1236,21 @@
         <br>
         <br>
 
-        <strong></strong>Thank you for choosing WebEaze. We appreciate your business. Please read our refund policy carefully.
+Thank you for choosing WebEaze. We appreciate your business. Please read our refund policy carefully.
 
         </p>
 
-        <p id="discount-notice" style="text-align: left; font-size: 20px; color: white;">All sales are final. No refunds allowed after purchase due to the nature of the services provided. There are no exceptions.
+        <p id="discount-notice" style="text-align: left; font-size: 20px; color: white;">All sales are final. We're unable to process any refunds after purchase due to the nature of the services provided. There are no exceptions to this policy.
 
-
-        <br>
-        <br>  
-     
-
-        Any changes to features and benefits associated with your package will not result in any refunds.
-    
 
         <br>
         <br>
 
         <strong>Fraudulent Chargebacks</strong>: Chargebacks are considered fraudulent if you have received the service. If you file a chargeback, you'll be responsible for all fees associated with the chargeback in addition to the original amount charged. In addition, you will be banned from using WebEaze services in the future. We reserve the right to take legal action against you if necessary.
 
-        <br>
-        <br>
+        </p>
 
-
-
-
-
+  
 
         <p id="discount-notice" style="text-align: left; font-size: 20px; color: white;">If you have any questions regarding our Refund Policy, please <strong><a href="contact-us.html">contact us</a></strong> and we will be happy to help.
         </p>
