Changes to FAQ direct link

--- a/faq.html
+++ b/faq.html
@@ -1161,7 +1161,7 @@
             
             <br>
             <br>
-            Our <a href="contact-us.html"><strong>Help Center</strong></a> has more answers. </p>
+            Our <a href="https://webeaze.tawk.help"><strong>Help Center</strong></a> has more answers. </p>
 
             
 
