--- a/website-request.html
+++ b/website-request.html
@@ -1441,7 +1441,7 @@
                 <option value="Paid Ad Campaign Request">Paid Ad Campaign Request</option>
                 <option value="Add-on Request">Add-on Request</option>
                 <option value="Feedback">Feedback</option>
-                <option value="other">Other</option>
+                <option value="Additional Website Request">Other</option>
               </select>
           
               <label>How can we help? *</label>
