--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@ content: "";
 
             <a href="faq.html" id="view-more-faq" class="contact-button" target="_blank">View all FAQ</a>
 
-            <a href="webeaze.tawk.help" id="view-more-faq" class="contact-button" target="_blank">Visit Help Center</a>
+            <a href="https://webeaze.tawk.help" id="view-more-faq" class="contact-button" target="_blank">Visit Help Center</a>
           
     
 
