--- a/portal.html
+++ b/portal.html
@@ -1363,12 +1363,12 @@ p strong, p b, strong, b {
 
 
 
-            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 2 weeks</strong></p>
+            <p style="color: rgb(149, 227, 149) !important"><strong>Current Timeline: 3 weeks</strong></p>
             <p>
                 <strong>For clients starting from scratch or launching something brand new. </strong>
             </p>
 
-            <p>No websites are in the queue. </p>
+            <p>2 websites are in the queue. </p>
 
             <br>
 
@@ -1428,10 +1428,10 @@ p strong, p b, strong, b {
                 How to Get Support <span class="spoiler-icon">▼</span>
                 <div class="spoiler-content">
                     <ul>
-                        <li><a href="website-request.html"><u>Submit a Support Request</u></a></li>
-                        <li><u><a href="https://calendly.com/webeaze/session-full-setups" target="_blank">Schedule Live Session</a></u></li>
+                        <li><a href="website-request.html"><u>Submit a Request</u> (fastest)</a></li>
+                        <li><u><a href="https://calendly.com/webeaze/session-full-setups" target="_blank">Zoom Live Session</a></u></li>
                         <li>
-                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u>: Available 9am-5pm Thursday and Friday, 9am-midnight on weekends ET.
+                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u>: Thursday & Friday from 9am-5pm ET. Weekends from 9am - midnight ET. 
                          </li>
                         <!-- <li><a href="#track-request">Track Your Request (coming soon!)</a></li> -->
                     </ul>
@@ -1451,17 +1451,12 @@ p strong, p b, strong, b {
                         <br>
                         <br>
 
-                    Add-ons are additional features that you request us to add to your website, that weren't included in your plan originally. This includes, but isn't limited to, any additional features, plugins, or services that are not included in your current plan. For example, a Live Chat integration.
+                    Add-ons are additional features that you request us to add to your website, that weren't included in your plan originally. 
 
                     <br>
                     <br>
 
-                    We will send you an invoice for the add-on or upgrade based on your request and the time it will take to complete. This invoice is attached to your Account but is charged separately from your subscription. You can view the most current pricing for common add-ons and upgrades <a href="https://webeaze.tawk.help/article/add-ons" target="_blank"><u>here</u></a>.
-
-
-
-                    To start the request, submit a <a href="website-request.html" target="_blank"><u>website request</u></a> and let us know what you'd like added. We'll review and send you an invoice, from Stripe to complete payment. Then, your requested additions will be completed within 1-3 days. 
-                    </p>
+                    There's more information on how to request an add-on and current pricing <a href="https://webeaze.tawk.help/article/add-ons" target="_blank"><u>at this page</u></a>.
 
                     
                 </div>
