--- a/index.html
+++ b/index.html
@@ -1822,9 +1822,12 @@ content: "";
             <p id="intro-services-html-next2">
                 Simple pricing built for small businesses. 
                 <br> 
-                Whether you're a tutor, travel agent, or local pro—we keep it affordable, straightforward, and support-packed.
+
+                Monthly plans require adding the <strong><a href="https://webeaze.tawk.help/article/webeaze-subscriptions">$299 setup fee</a></strong> to your cart before checkout.
+
 
                 <br>
+                Setup is included in yearly plans.
  
 
             </p>
