--- a/faq.html
+++ b/faq.html
@@ -1273,7 +1273,7 @@
 
             <div class="faq-item">
                 <h3 class="faq-question"> How much support do I get? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">  Every WebEaze package includes ongoing support for 12 months—or as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
+                <p class="faq-answer">  Every WebEaze package includes ongoing support for as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
 
 
                 </p>
@@ -1281,7 +1281,7 @@
 
 
             <div class="faq-item">
-                <h3 class="faq-question"> Can I get a refund if I change my mind?<span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question">Can I get a refund if I change my mind?<span class="arrow"> ▼ </span></h3>
 
                 <p class="faq-answer"> Payments are non-refundable, since they cover time and resources spent on your project. That's why we offer a free consultation first—to make sure we're a good fit before you commit. If you're ever unsure, just reach out—we're happy to help. 
                 </p>
@@ -1304,9 +1304,9 @@
 
 
             <div class="faq-item">
-                <h3 class="faq-question">Are there any other costs after purchasing the package?<span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question">Are there any other costs after subscribing?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    No surprise fees. We're upfront about everything. If you need extras like a custom domain, premium hosting, or add-ons (like booking tools), we'll walk you through the costs before anything is purchased.
+                    No surprise fees. We're upfront about all pricing. If you need extras like a custom domain, premium hosting, or add-ons (like booking tools), we'll walk you through the numbers before anything is purchased.
                 </p>
             </div>
 
