--- a/index.html
+++ b/index.html
@@ -1892,15 +1892,15 @@ content: "";
 
             <div class="faq-item">
                 <h3 class="faq-question"> How much support do I get? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> Every WebEaze package includes ongoing support for 12 months—or as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
+                <p class="faq-answer"> Every WebEaze package includes ongoing support for as long as your subscription is active. That means unlimited updates, security checks, and help whenever you need it. Whether it's fixing a broken link or adding new class offerings, we've got your back.
 
                 </p>
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Are there any other costs after purchasing the package?<span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question">Are there any other costs after subscribing?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    No surprise fees. We're upfront about everything. If you need extras like a custom domain, premium hosting, or add-ons (like booking tools), we'll walk you through the costs before anything is purchased. 
+                    No surprise fees. We're upfront about all pricing. If you need extras like a custom domain, premium hosting, or add-ons (like booking tools), we'll walk you through the numbers before anything is purchased.
                 </p>
             </div>
 
