--- a/index.html
+++ b/index.html
@@ -2027,7 +2027,7 @@ content: "";
         }
 
         .fun-box {
-            width: 90%;
+            width: 60%;
             margin: 10px auto;
         }
 }
@@ -2083,13 +2083,13 @@ content: "";
 
 </main>
 
-<section class="footnotes" style="background-color: #7851a9;" >
+<!-- <section class="footnotes" style="background-color: #7851a9;" >
 
-    <!-- <p id="footnote1" style="text-align: center; background-color: transparent !important;">* <a href="https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/#:~:text=Created%20with%20Highcharts%207.2.2,23%20Q1%20'24%20Q3%20'24" target="_blank">Source: Percentage of mobile device website traffic worldwide from 1st quarter 2015 to 4th quarter 2024, from Statista.</a></p> -->
+    <p id="footnote1" style="text-align: center; background-color: transparent !important;">* <a href="https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/#:~:text=Created%20with%20Highcharts%207.2.2,23%20Q1%20'24%20Q3%20'24" target="_blank">Source: Percentage of mobile device website traffic worldwide from 1st quarter 2015 to 4th quarter 2024, from Statista.</a></p>
 
-<!-- <p id="footnote2" style="background-color: transparent !important;">  </p> -->
+<p id="footnote2" style="background-color: transparent !important;">  </p>
 
-</section>
+</section> -->
 
 
 
