--- a/website-request.html
+++ b/website-request.html
@@ -1437,7 +1437,8 @@
               <select name="subject" required>
                 <option value="">Select a topic...</option>
                 <option value="Website Request">Website Change</option>
-                <option value="Website Issue">Website Issue</option>
+                <option value="Website Issue">Website Issue</option>'
+                <option value="Urgent Website Request">URGENT, site down</option>
                 <option value="Paid Ad Campaign Request">Paid Ad Campaign Request</option>
                 <option value="Add-on Request">Add-on Request</option>
                 <option value="Feedback">Feedback</option>
